Making the reflasher depend on much more loader code.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,3 +1,5 @@
+HEADER=--header ../software/usb_ir/iguanaIR.h
+
 all:
-	./utils/generate_incs usb_ir.body/body.inc
-	./utils/generate_incs usb_ir.loader/loader.inc
+	./utils/generate_incs $(HEADER) usb_ir.body/body.inc
+	./utils/generate_incs $(HEADER) usb_ir.loader/loader.inc
