Sharing as much code as possible across firmwares.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,5 +1,13 @@
-HEADER=--header ../software/usb_ir/iguanaIR.h
+INCLUDES=usb_ir.body/body.inc usb_ir.loader/loader.inc
+HEADER=../software/usb_ir/iguanaIR.h
+JUNK=project.* memory.inc mkdep linkfile opts.txt output obj backup
 
-all:
-	./utils/generate_incs $(HEADER) usb_ir.body/body.inc
-	./utils/generate_incs $(HEADER) usb_ir.loader/loader.inc
+all: $(INCLUDES)
+
+%.inc: $(HEADER) Makefile
+	./utils/generate_incs --header $(HEADER) $@
+
+clean:
+	rm -rf $(INCLUDES) $(addprefix usb_ir.*/, $(JUNK))
+
+.PHONY: all clean
