Missed something that should be deleted.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,6 +1,6 @@
 INCLUDES=usb_ir.body/body.inc usb_ir.loader/loader.inc
 HEADER=../software/usb_ir/iguanaIR.h
-JUNK=project.* memory.inc mkdep linkfile opts.txt output obj backup
+JUNK=project.* memory.inc mkdep linkfile opts.txt output obj backup lib/obj
 
 all: $(INCLUDES)
 
