--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -18,6 +18,13 @@ LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 INSTALL = @INSTALL@
 
+ifeq ($(shell uname -m),x86_64)
+  LIBDIR  = lib64
+  CFLAGS += -fpic
+else
+  LIBDIR  = lib
+endif
+
 # Older versions of libusb do not play with threads at all nicely.
 # This driver was actually developed on such a version of libusb.
 # However, in later versions threads seem to not eat the responses for
@@ -66,7 +73,7 @@ _iguanaIR.so: iguanaIR_wrap.c
 install: all
 	install -D igclient $(DESTDIR)/usr/bin/igclient
 	install -D igdaemon $(DESTDIR)/usr/bin/igdaemon
-	install -D libiguanaIR.so $(DESTDIR)/usr/lib/libiguanaIR.so
+	install -D libiguanaIR.so $(DESTDIR)/usr/$(LIBDIR)/libiguanaIR.so
 	install -D iguanaIR.init $(DESTDIR)/etc/rc.d/init.d/iguanaIR
 	install -D --mode=0644 iguanaIR.options $(DESTDIR)/etc/default/iguanaIR
 	install -D iguanaIR.h $(DESTDIR)/usr/include/iguanaIR.h
@@ -124,6 +131,6 @@ config.status: configure
 Makefile: Makefile.in config.status
 	./config.status
 
-config.h: stamp-h
-stamp-h: config.h.in config.status
+config.h: autoconf/stamp-h
+autoconf/stamp-h: config.h.in config.status
 	./config.status
