Name the LCD writer better (and retest it with the current loader/body AND v3).  Then change the links in the reflasher to use the development version (0) as the newest.

--- a/firmware/reflasher/Makefile
+++ b/firmware/reflasher/Makefile
@@ -11,6 +11,7 @@ install:
 	install -d $(DESTDIR)/usr/lib/iguanaIR-reflasher/hex
 	install upgrade-usb $(DESTDIR)/usr/lib/iguanaIR-reflasher
 	install hex/*.hex $(DESTDIR)/usr/lib/iguanaIR-reflasher/hex
+	rm $(DESTDIR)/usr/lib/iguanaIR-reflasher/hex/*-0.hex
 	install -d $(DESTDIR)/usr/bin
 	ln -s ../lib/iguanaIR-reflasher/upgrade-usb \
               $(DESTDIR)/usr/bin/iguanaIR-reflasher
