Updated to 0.4 rename iguanaIR to iguanair for reflasher, removed rm *-0.hex from makefile

--- a/firmware/reflasher/Makefile
+++ b/firmware/reflasher/Makefile
@@ -9,13 +9,12 @@ rpm: tarball
 
 tarball:
 	ln -s . $(NAME)-$(VERSION); \
-	tar --dereference -cjf $(NAME)-$(VERSION).tar.bz2 --exclude .svn `ls | grep -v '^$(NAME)-$(VERSION)\(.tar.bz2\)\?$$' | grep -v '^usb_ir.reflasher$$' | sed 's/^/$(NAME)-$(VERSION)\//'`; \
+	tar --dereference -cjf $(NAME)-$(VERSION).tar.bz2 --exclude .svn --exclude *-0.hex `ls | grep -v '^$(NAME)-$(VERSION)\(.tar.bz2\)\?$$' | grep -v '^usb_ir.reflasher$$' | sed 's/^/$(NAME)-$(VERSION)\//'`; \
 	rm $(NAME)-$(VERSION);
 
 install:
 	install -d $(DESTDIR)/usr/lib/$(NAME)/hex
 	install upgrade-usb $(DESTDIR)/usr/lib/$(NAME)
 	install hex/*.hex $(DESTDIR)/usr/lib/$(NAME)/hex
-	rm $(DESTDIR)/usr/lib/$(NAME)/hex/*-0.hex
 	install -d $(DESTDIR)/usr/bin
 	ln -s ../lib/$(NAME)/upgrade-usb $(DESTDIR)/usr/bin/$(NAME)
