Trying to get a new version of the reflasher done.

--- a/firmware/reflasher/Makefile
+++ b/firmware/reflasher/Makefile
@@ -7,6 +7,10 @@ rpm: tarball
 	rpmbuild -ts $(NAME)-$(VERSION).tar.bz2
 	rpmbuild -tb $(NAME)-$(VERSION).tar.bz2
 
+dev devel:
+	ln -s ../../usb_ir.body/output/usb_ir.hex hex/body-0.hex
+	ln -s ../../usb_ir.loader/output/usb_ir.hex hex/loader-0.hex
+
 tarball:
 	ln -s . $(NAME)-$(VERSION); \
 	tar --dereference -cjf $(NAME)-$(VERSION).tar.bz2 --exclude .svn --exclude *-0.hex `ls | grep -v '^$(NAME)-$(VERSION)\(.tar.bz2\)\?$$' | grep -v '^usb_ir.reflasher$$' | sed 's/^/$(NAME)-$(VERSION)\//'`; \
@@ -18,3 +22,5 @@ install:
 	install hex/*.hex $(DESTDIR)/usr/lib/$(NAME)/hex
 	install -d $(DESTDIR)/usr/bin
 	ln -s ../lib/$(NAME)/upgrade-usb $(DESTDIR)/usr/bin/$(NAME)
+
+.PHONY: all rpm dev devel tarball install
