Temporary patch that should be fixed using libtool or an addition to the configure script.  PPC and x86_64 both need fpic.

--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -22,7 +22,12 @@ ifeq ($(shell uname -m),x86_64)
   LIBDIR  = lib64
   CFLAGS += -fpic
 else
-  LIBDIR  = lib
+  ifeq ($(shell uname -m),ppc)
+    LIBDIR  = lib
+    CFLAGS += -fpic
+  else
+    LIBDIR  = lib
+  endif
 endif
 
 # Older versions of libusb do not play with threads at all nicely.
