--- a/software/usb_ir/win32/IguanaIR Package.vcproj
+++ b/software/usb_ir/win32/IguanaIR Package.vcproj
@@ -1,36 +1,62 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="9.00"
 	Name="IguanaIR Package"
 	ProjectGUID="{41A51F53-0F64-4A9E-BAE2-4F2199C6CED4}"
 	RootNamespace="IguanaIR Package"
-	Keyword="MakeFileProj">
+	Keyword="MakeFileProj"
+	TargetFrameworkVersion="131072"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
 			IntermediateDirectory="Debug"
-			ConfigurationType="0">
+			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			>
 			<Tool
 				Name="VCNMakeTool"
-				BuildCommandLine="c:\python24\python setup.py $(OutDir)"
-				CleanCommandLine="del iguanaIR.iss"/>
+				BuildCommandLine="c:\python25\python setup.py $(OutDir)"
+				ReBuildCommandLine=""
+				CleanCommandLine="del iguanaIR.iss"
+				Output=""
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
-			ConfigurationType="0">
+			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			>
 			<Tool
 				Name="VCNMakeTool"
 				BuildCommandLine="c:\python24\python setup.py $(OutDir)"
+				ReBuildCommandLine=""
 				CleanCommandLine="del iguanaIR.iss"
-				Output="IguanaIR Packaging.exe"/>
+				Output="IguanaIR Packaging.exe"
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
