--- a/software/usb_ir/win32/igclient.vcproj
+++ b/software/usb_ir/win32/igclient.vcproj
@@ -140,7 +140,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libpopt.lib"
+				AdditionalDependencies="ws2_32.lib libpopt.lib"
 				OutputFile="$(OutDir)/igclient.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="popt"
