--- a/software/usb_ir/win32/iguanaIR.vcproj
+++ b/software/usb_ir/win32/iguanaIR.vcproj
@@ -26,7 +26,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Using swig to generate wrappers..."
-				CommandLine="c:\cygwin\swig -python -outdir $(OutDir) $(InputDir)\..\iguanaIR.i"
+				CommandLine="c:\cygwin\bin\swig -python -outdir $(OutDir) $(InputDir)\..\iguanaIR.i"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -65,7 +65,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="libusb.lib Ws2_32.lib"
-				OutputFile="$(OutDir)/_iguanaIR.dll"
+				OutputFile="$(OutDir)/_iguanaIR.pyd"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="libusb-win32;c:\Python25\libs"
 				GenerateDebugInformation="true"
@@ -145,7 +145,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="libusb.lib Ws2_32.lib"
-				OutputFile="$(OutDir)/_iguanaIR.dll"
+				OutputFile="$(OutDir)/_iguanaIR.pyd"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="libusb-win32;c:\Python25\libs"
 				GenerateDebugInformation="true"
