Hopefully this will make real packages on debian now.  Still need to add the reflasher stuff to this distribution.

--- a/software/usb_ir/autoconf/configure.ac
+++ b/software/usb_ir/autoconf/configure.ac
@@ -3,7 +3,7 @@
 
 AC_PREREQ(2.59)
 AC_INIT(iguanaIR,
-  esyscmd(grep Version: ../iguanaIR.spec | sed 's/Version: *//' | tr -d '\n'),
+  esyscmd(grep Version: ../packaging/fedora/iguanaIR.spec | sed 's/Version: *//' | tr -d '\n'),
   support@iguanaworks.net)
 AC_CONFIG_SRCDIR([daemon.c])
 AC_CONFIG_HEADER([config.h])
@@ -146,7 +146,7 @@ if test x$USE_PYTHON != xno; then
 fi
 
 # look for swig
-AC_PROG_SWIG(1.3.33)
+AC_PROG_SWIG(1.3.31)
 
 # Output some files
 AC_CONFIG_FILES([Makefile])
