--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -63,6 +63,12 @@ compat.o: compat.c config.h
 # NOTE: I would rather use PYTHON_VERSION, but it doesn't work
 ifneq (@PYTHON_CPPFLAGS@,)
 all: _iguanaIR.$(SHAREEXT)
+install: install-python
+
+.PHONY: install-python
+install-python:
+	install -D _iguanaIR.so $(DESTDIR)@PYTHON_SITE_PKG@/_iguanaIR.so
+	install -D iguanaIR.py $(DESTDIR)@PYTHON_SITE_PKG@/iguanaIR.py
 
 iguanaIR_wrap.c iguanaIR.py: iguanaIR.i iguanaIR.h Makefile
 	swig $(CPPFLAGS) @PYTHON_CPPFLAGS@ -python $<
@@ -79,7 +85,7 @@ install: all
 	install -D igclient $(DESTDIR)/usr/bin/igclient
 	install -D igdaemon $(DESTDIR)/usr/bin/igdaemon
 	install -D libiguanaIR.$(SHAREEXT) $(DESTDIR)/usr/$(LIBDIR)/libiguanaIR.$(SHAREEXT)
-	install -D iguanaIR.init $(DESTDIR)/etc/rc.d/init.d/iguanaIR
+	install -D iguanaIR.init $(DESTDIR)/etc/init.d/iguanaIR
 	install -D --mode=0644 iguanaIR.options $(DESTDIR)/etc/default/iguanaIR
 	install -D iguanaIR.h $(DESTDIR)/usr/include/iguanaIR.h
 	install -D --mode 644 plug-trigger/udev/iguanaIR.rules \
