Added a target to make a package.

--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -109,6 +109,10 @@ distclean: clean
 cleanest: distclean
 	rm -rf configure autom4te.cache
 
+.PHONY: package
+package:
+	make -C packaging
+
 
 
 
