--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -98,7 +98,7 @@ install: all
 #	                      $(DESTDIR)/etc/hotplug/usb/iguanaIR
 
 .PHONY: clean
-clean:
+clean: package-clean
 	rm -f *~ *.o *iguanaIR.$(SHAREEXT) *libiguanaIR.a iguanaIR.py* iguanaIR_wrap.c igdaemon igclient config.log
 
 .PHONY: distclean
@@ -109,10 +109,11 @@ distclean: clean
 cleanest: distclean
 	rm -rf configure autom4te.cache
 
-.PHONY: package
+.PHONY: package package-clean
 package:
 	make -C packaging
-
+package-clean:
+	make -C packaging clean
 
 
 
