Change where the packaging output goes.

--- a/software/usb_ir/packaging/Makefile
+++ b/software/usb_ir/packaging/Makefile
@@ -26,6 +26,8 @@ fedora-clean:
 
 ubuntu: ../debian
 	cd ..; dpkg-buildpackage -uc -us -rfakeroot
+	mv ../../iguanair_* .
+	mv ../../iguanair-python_* .
 ../debian:
 	ln -s packaging/debian ..
 ubuntu-clean:
