Some rearrangement of headers.  Hopefully similar tricks will work on windows.

--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -142,13 +142,14 @@ clean:
 .PHONY: distclean
 distclean: clean
 	rm -f Makefile config.h
+	make -C packaging clean
 
 .PHONY: cleanest
 cleanest: distclean
 	rm -rf configure autom4te.cache
 
 .PHONY: package
-package:
+package: distclean
 	make -C packaging
 
 
